recipes/lasagna.css
body {
  width: 70vw;
  height: 230vw;
  background: black;
  background-repeat: repeat;
  color: white;
  font-family: monospace;
  font-style: normal;
  list-style-position: inside;
  background-image: url(../img/recipes-pages/frame.png);
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  margin: 1%;
  padding-left: 13vw;
  padding-right: 13vw;
  padding-top: 1vw;
  padding-bottom: 1vw;
}

main {
  text-align: center;
  display: flex;
  flex-direction: column;
  font-size: 1.5vw;
  min-height: 80%;
  padding-block-start: 15vw;
  margin-block-end: 11vw;
  margin-inline-start: 5vw;
  margin-inline-end: 5vw;
  padding-left: 0vw;
}

header {
  align-items: center;
  font-family: serif;
}

h1 {
  font-size: 5.9vw;
  color: white;
  text-align: center;
  font-family: Arial, Helvetica, sans-serif;
  font-style: normal;
  text-transform: uppercase;
}

h2 {
  text-align: center;
  font-size: 3.0vw;
  font-weight: bold;
}

h3 {
  display: inline;
  justify-content: center;
  align-items: center;
  background-color: #5a3442;
  font-size: 2.5vw;
  text-align: center;
  text-transform: capitalize;
  align-items: center;
}

p {
  font-size: 2vmin;
  margin-bottom: 5vw;
}

ul {
  text-align: left;
  padding: 20px;
}

ol {
  text-align: left;
  padding: 20px;
}

.container {
  margin-bottom: 10%;
}

.Ingredients {
  margin-bottom: 5vw;
  padding: 5%;
  border-color: #b78100;
  border-style: dashed;
  border-width: 0.2vw;
  overflow: hidden;
}

.Instructions {
  padding-top: 5%;
  text-indent: 5%;
  margin-bottom: 5vw;
  padding: -1%;
  border-color: #b78100;
  border-style: dashed;
  border-width: 0.2vw;
  overflow: hidden;
}

.Instructions p {
  margin-bottom: 0%;
}

.Instructions h3 {}

.Instructions ol {
  padding-top: 0%;
}

.Nutritions {
  display: inline-block;
  margin-bottom: 5vw;
  padding: 5%;
  border-color: #b78100;
  border-style: dashed;
  border-width: 0.2vw;
  overflow: hidden;
}

.Nutritions-list {
  margin: 0;
  columns: 2;
}

footer {
  overflow: hidden;
  margin-bottom: 0vw;
  text-align: center;
  font-size: 2vw;
}

footer a {
  color: white;
  text-decoration: none;
}

